# oneshot-oauth2-callback

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: publish.yml
src/: lib.rs  response.rs  server.rs  server_async.rs  server_sync.rs  ui.rs
