[package]
name = "oneshot-oauth2-callback"
version = "0.1.0"
edition = "2021"

authors = ["Tom Milligan <code@tommilligan.net>"]
description = "Easily receive an OAuth2 code grant callback at a local address."
repository = "https://github.com/tommilligan/oneshot-oauth2-callback"

license = "MIT"
keywords = ["oauth2", "callback", "local", "cli", "webhook"]
readme = "README.md"

[dependencies]
tokio = { version = "1", default_features = false, features = ["sync"], optional = true }
serde = { version = "1", default_features = false, features = ["derive"] }
serde_urlencoded = "0.7"
oauth2 = { version = "4", default_features = false }
axum = { version = "0.5.17", default_features = false, features = ["http1"], optional = true }
thiserror = "1.0.37"
hyper = { version = "0.14.23", optional = true }
rouille = { version = "3.6.2", default_features = false, optional = true }

[features]
default = ["async"]
sync = ["rouille"]
async = ["axum", "hyper", "tokio"]
